# tiny-embed

./: .gitignore  CMakeLists.txt  README.md  tiny-embed.txt
tiny-embed/: main.c
